--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 
     <!--Header-->
     <header>
-         <h1><a href="./index.html">Joshua Aldrich</a></h1>
+         <h1><a href="./index.html"><strong>Joshua Aldrich</strong></a></h1>
          <nav>
             <ul>
                 <li>
@@ -38,31 +38,29 @@
     <!--About me-->
     <section>
 
-        <div>
-
-            <h2 id="about-me">About Me</h2>
-
+    <section id="about-me" class="container">
             <div>
-                <div>
+                <h2>About Me</h2>
+            </div>
+             <div>
+                <div class="aboutme-content">
                     <img src="./assets/images/ProfilePicture.jpg" alt="Hello, I'm Josh" />
                 </div>
                 <p>Hello my name is Joshua Aldrich. I have had a passion for coding ever since I started my college degree. I ended up taking a break to focus on working for a couple years but decided to get back into it once I saved enough to join the UCF coding bootcamp. I have constantly watched videos on youtube and the passion for coding hasn't left so I'm glad to take this opportunity to make coding a career path.</p>
             </div>
-        </div>
-
     </section>
     <!--About me End-->
 
     <!-- Work -->
-    <main id="work" class="work">
+    <main id="work" class="container">
 
-        <div class="container">
+        <div class="label">
 
         <h2 id="work">Work</h2>
 
             <div class="img-container">
 
-                <div class="firstwork">
+                <div class="first">
                     <a href="https://joshuaaldrich.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy.png" alt="Run Buddy (HTML & CSS)" /></a>
                     <div class="text">
                         <h3>Run Buddy</h3>
@@ -111,9 +109,9 @@
 
     <!--Contact Me-->
 
-    <article id="contact" class="contact-me">
+    <article id="contact" class="container">
 
-        <div class="container">
+        <div class="label">
 
         <h2 id="contact-me">Contact Me</h2>
     
