changes made to header,nav,hero and about me section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <p>Hello my name is Joshua Aldrich. I have had a passion for coding ever since I started my college degree. I ended up taking a break to focus on working for a couple years but decided to get back into it once I saved enough to join the UCF coding bootcamp. I have constantly watched videos on youtube and the passion for coding hasn't left so I'm glad to take this opportunity to make coding a career path.</p>
             </div>
     </section>
+
+</section>
     <!--About me End-->
 
     <!-- Work -->
@@ -109,7 +111,7 @@
 
     <!--Contact Me-->
 
-    <article id="contact" class="container">
+    <article id="contact" class="contact-me">
 
         <div class="label">
 
