--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua Aldrich Portfolio</title>
 </head>
@@ -12,7 +13,7 @@
 
     <!--Header-->
     <header>
-         <h1><a href="./index.html"><strong>Joshua Aldrich</strong></a></h1>
+         <h1><a href="./index.html">Joshua Aldrich</a></h1>
          <nav>
             <ul>
                 <li>
@@ -30,103 +31,108 @@
             </ul>
             </nav>
      </header>
-     <!--Header End-->
 
     <section class="hero"></section>
 
     <!--About me-->
-    <section>
 
     <section id="about-me" class="about-me">
-            <div class="title">
-                <h2>About Me</h2>
-            </div>
 
-             <div>
-                <div class="aboutimage">
+        <div class="container">
+
+            <h2>About<br> Me</h2>
+
+            <div class="aboutme">
+                <div class="about-img">
                     <img src="./assets/images/ProfilePicture.jpg" alt="Hello, I'm Josh" />
                 </div>
                 <p>Hello my name is Joshua Aldrich. I have had a passion for coding ever since I started my college degree. I ended up taking a break to focus on working for a couple years but decided to get back into it once I saved enough to join the UCF coding bootcamp. I have constantly watched videos on youtube and the passion for coding hasn't left so I'm glad to take this opportunity to make coding a career path.</p>
             </div>
-    </section>
-
-</section>
-    <!--About me End-->
-
-    <!-- Work -->
-    <section id="work" class="my-work">
-        <div class="title">
-            <h2>Work</h2>
         </div>
 
-        <div class="projects-grid-wrapper">
-            <div class="projects-grid">
+    </section>
 
-                    <a href="https://joshuaaldrich.github.io/run-buddy/" target="_blank" class="runbuddy">
-                    <div class="project-label">
+    <!-- begin portfolio section -->
+
+    <main id="work">
+
+        <div class="container">
+
+        <h2>Work</h2>
+
+            <div class="img-container">
+
+                <div class="firstwork img">
+                    <a href="https://joshuaaldrich.github.io/run-buddy/" target="_blank"></a>
+                    <div class="text">
                         <h3>Run Buddy</h3>
                         <p>HTML / CSS</p>
                     </div>
-                    </a>
+                </div>
 
-                    <a href="https://joshuaaldrich.github.io/Horiseon-Accessibility-changes/" target="_blank" class="horiseon">
-                    <div class="project-label">
+                <div class="work img-1">
+                    <a href="https://joshuaaldrich.github.io/Horiseon-Accessibility-changes/" target="_blank"></a>
+                    <div class="text">
                         <h3>Horiseon</h3>
                         <p>HTML / CSS</p>
                     </div>
-                    </a>
+                </div>
 
-                    <a href="https://m.facebook.com/DD-10-LLC-101252281781627/" target="_blank" class="ddten">
-                    <div class="project-label">
+                <div class="work img-2">
+                    <a href="https://m.facebook.com/DD-10-LLC-101252281781627/" target="_blank"></a>
+                    <div class="text">
                         <h3>In Progress</h3>
                         <p>HTML / CSS</p>
                     </div>
-                    </a>
+                </div>
 
-                    <a href="https://github.com/JoshuaAldrich" target="_blank" class="javascript">
-                    <div class="project-label">
+                <div class="work img-3">
+                    <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
+                    <div class="text">
                         <h3>In Progress</h3>
                         <p>Javascript</p>
                     </div>
-                    </a>
+                </div>
 
-                    <a href="https://github.com/JoshuaAldrich" target="_blank" class="python">
-                    <div class="project-label">
+                <div class="work img-4">
+                    <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
+                    <div class="text">
                         <h3>In Progress</h3>
                         <p>Python</p>
                     </div>
                 </div>
+
             </div>
+
         </div>
 
-    </section>
-     <!-- Work End -->
+    </main>
 
     <!--Contact Me-->
 
-    <article id="contact">
+    <article id="contact" class="contact-me">
 
-        <h2 id="contact-me" class="title">Contact Me</h2>
-        
-        <div class="content-wrapper">
-            <div class="contact-list">
-                <p><img src="./assets/images/phone-icon.png" alt="Phone"/> <a href="tel:407.670.4797">407-670-4797</a></p>
-                <p><img src="./assets/images/email-icon.png" alt="E-mail"/> <a href="mailto:joshuataldrich@gmail.com">joshuataldrich@gmail.com</a></p>
-                <p><img src="./assets/images/github-icon.png" alt="GitHub"/> <a href="https://github.com/JoshuaAldrich" target="blank">Github</a></p>
-                <p><img src="./assets/images/linkedin-icon.png" alt="LinkedIn"/> <a href="https://www.linkedin.com/in/joshua-aldrich-4924b323b/" target="blank">LinkedIn</a></p>
-            </div>
+        <div class="container">
+
+        <h2>Contact Me</h2>
+    
+        <div class="contactme">
+        <p><a href="tel:407.670.4797">407-670-4797</a></p>
+        <p><a href="mailto:joshuataldrich@gmail.com">joshuataldrich@gmail.com</a></p>
+        <p><a href="https://github.com/JoshuaAldrich" target="blank">Github</a></p>
+        <p><a href="https://www.linkedin.com/in/joshua-aldrich-4924b323b/" target="blank">LinkedIn</a></p>
+        </div>
         </div>
 
     </article>
-    <!--Contact Me End-->
 
     <!--Footer-->
+
     <footer>
 
         <p>Website by Joshua Aldrich</p>
 
     </footer>
-    <!--Footer End-->
 
 </body>
 
