changes made to html comments to better clarify sections

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             </ul>
             </nav>
      </header>
-
+     <!--header end-->
+     <!--Hero image of Orlando-->
     <section class="hero"></section>
 
     <!--About me-->
@@ -51,6 +52,7 @@
         </div>
 
     </section>
+    <!--about me ends-->
 
     <!-- begin portfolio section -->
 
@@ -61,7 +63,7 @@
         <h2>Work</h2>
 
             <div class="img-container">
-
+                <!--highlighted work to contain largest section-->
                 <div class="firstwork img">
                     <a href="https://joshuaaldrich.github.io/run-buddy/" target="_blank"></a>
                     <div class="text">
@@ -69,7 +71,7 @@
                         <p>HTML / CSS</p>
                     </div>
                 </div>
-
+                <!--Horiseon-->
                 <div class="work img-1">
                     <a href="https://joshuaaldrich.github.io/Horiseon-Accessibility-changes/" target="_blank"></a>
                     <div class="text">
@@ -77,7 +79,7 @@
                         <p>HTML / CSS</p>
                     </div>
                 </div>
-
+                <!-- DDTEN project -->
                 <div class="work img-2">
                     <a href="https://m.facebook.com/DD-10-LLC-101252281781627/" target="_blank"></a>
                     <div class="text">
@@ -85,15 +87,15 @@
                         <p>HTML / CSS</p>
                     </div>
                 </div>
-
+                <!--Javascript project-->
                 <div class="work img-3">
                     <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
                     <div class="text">
                         <h3>In Progress</h3>
                         <p>Javascript</p>
                     </div>
-                </div>
-
+                    </div>
+                <!--Python project tbd-->
                 <div class="work img-4">
                     <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
                     <div class="text">
@@ -102,9 +104,9 @@
                     </div>
                 </div>
 
-            </div>
+            </div><!--end image container-->
 
-        </div>
+        </div><!--end container div-->
 
     </main>
 
@@ -125,6 +127,7 @@
         </div>
 
     </article>
+    <!--Contact end-->
 
     <!--Footer-->
 
