Added Brainy Recipes to portfolio

--- a/index.html
+++ b/index.html
@@ -1,142 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joshua Aldrich Portfolio</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!--Header-->
     <header>
-         <h1><a href="./index.html">Joshua Aldrich</a></h1>
-         <nav>
-            <ul>
-                <li>
-                    <a href="#about-me"> About Me</a>
-                </li>
-                <li>
-                    <a href="#work"> Work</a>
-                </li>
-                <li>
-                    <a href="#contact"> Contact Me</a>
-                </li>
-                <li>
-                    <a href=""> Resume</a>
-                </li>
-            </ul>
-            </nav>
-     </header>
-     <!--header end-->
-     <!--Hero image of Orlando-->
+      <h1><a href="./index.html">Joshua Aldrich</a></h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about-me"> About Me</a>
+          </li>
+          <li>
+            <a href="#work"> Work</a>
+          </li>
+          <li>
+            <a href="#contact"> Contact Me</a>
+          </li>
+          <li>
+            <a href=""> Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!--header end-->
+    <!--Hero image of Orlando-->
     <section class="hero"></section>
 
     <!--About me-->
 
     <section id="about-me" class="about-me">
+      <div class="container">
+        <h2>
+          About<br />
+          Me
+        </h2>
 
-        <div class="container">
-
-            <h2>About<br> Me</h2>
-
-            <div class="aboutme">
-                <div class="about-img">
-                    <img src="./assets/images/ProfilePicture.jpg" alt="Hello, I'm Josh" />
-                </div>
-                <p>Hello my name is Joshua Aldrich. I have had a passion for coding ever since I started my college degree. I ended up taking a break to focus on working for a couple years but decided to get back into it once I saved enough to join the UCF coding bootcamp. I have constantly watched videos on youtube and the passion for coding hasn't left so I'm glad to take this opportunity to make coding a career path.</p>
-            </div>
+        <div class="aboutme">
+          <div class="about-img">
+            <img
+              src="./assets/images/ProfilePicture.jpg"
+              alt="Hello, I'm Josh"
+            />
+          </div>
+          <p>
+            Hello my name is Joshua Aldrich. I have had a passion for coding
+            ever since I started my college degree. I ended up taking a break to
+            focus on working for a couple years but decided to get back into it
+            once I saved enough to join the UCF coding bootcamp. I have
+            constantly watched videos on youtube and the passion for coding
+            hasn't left so I'm glad to take this opportunity to make coding a
+            career path.
+          </p>
         </div>
-
+      </div>
     </section>
     <!--about me ends-->
 
     <!-- begin portfolio section -->
 
     <main id="work">
-
-        <div class="container">
-
+      <div class="container">
         <h2>Work</h2>
 
-            <div class="img-container">
-                <!--highlighted work to contain largest section-->
-                <div class="firstwork img">
-                    <a href="https://joshuaaldrich.github.io/run-buddy/" target="_blank"></a>
-                    <div class="text">
-                        <h3>Run Buddy</h3>
-                        <p>HTML / CSS</p>
-                    </div>
-                </div>
-                <!--Horiseon-->
-                <div class="work img-1">
-                    <a href="https://joshuaaldrich.github.io/Horiseon-Accessibility-changes/" target="_blank"></a>
-                    <div class="text">
-                        <h3>Horiseon</h3>
-                        <p>HTML / CSS</p>
-                    </div>
-                </div>
-                <!-- DDTEN project -->
-                <div class="work img-2">
-                    <a href="https://m.facebook.com/DD-10-LLC-101252281781627/" target="_blank"></a>
-                    <div class="text">
-                        <h3>In Progress</h3>
-                        <p>HTML / CSS</p>
-                    </div>
-                </div>
-                <!--Javascript project-->
-                <div class="work img-3">
-                    <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
-                    <div class="text">
-                        <h3>In Progress</h3>
-                        <p>Javascript</p>
-                    </div>
-                    </div>
-                <!--Python project tbd-->
-                <div class="work img-4">
-                    <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
-                    <div class="text">
-                        <h3>In Progress</h3>
-                        <p>Python</p>
-                    </div>
-                </div>
-
-            </div><!--end image container-->
-
-        </div><!--end container div-->
-
+        <div class="img-container">
+          <!--highlighted work to contain largest section-->
+          <div class="firstwork img">
+            <a
+              href="https://joshuaaldrich.github.io/run-buddy/"
+              target="_blank"
+            ></a>
+            <div class="text">
+              <h3>Run Buddy</h3>
+              <p>HTML / CSS</p>
+            </div>
+          </div>
+          <!--Horiseon-->
+          <div class="work img-1">
+            <a
+              href="https://joshuaaldrich.github.io/Horiseon-Accessibility-changes/"
+              target="_blank"
+            ></a>
+            <div class="text">
+              <h3>Horiseon</h3>
+              <p>HTML / CSS</p>
+            </div>
+          </div>
+          <!-- DDTEN project -->
+          <div class="work img-2">
+            <a
+              href="https://m.facebook.com/DD-10-LLC-101252281781627/"
+              target="_blank"
+            ></a>
+            <div class="text">
+              <h3>Brainy Recipes</h3>
+              <p>
+                HTML / CSS / JS /<br />
+                Materialize /<br />
+                React / AJAX
+              </p>
+            </div>
+          </div>
+          <!--Javascript project-->
+          <div class="work img-3">
+            <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
+            <div class="text">
+              <h3>In Progress</h3>
+              <p>Javascript</p>
+            </div>
+          </div>
+          <!--Python project tbd-->
+          <div class="work img-4">
+            <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
+            <div class="text">
+              <h3>In Progress</h3>
+              <p>Python</p>
+            </div>
+          </div>
+        </div>
+        <!--end image container-->
+      </div>
+      <!--end container div-->
     </main>
 
     <!--Contact Me-->
 
     <article id="contact" class="contact-me">
-
-        <div class="container">
-
+      <div class="container">
         <h2>Contact Me</h2>
-    
-        <div class="contactme">
-        <p><a href="tel:407.670.4797">407-670-4797</a></p>
-        <p><a href="mailto:joshuataldrich@gmail.com">joshuataldrich@gmail.com</a></p>
-        <p><a href="https://github.com/JoshuaAldrich" target="blank">Github</a></p>
-        <p><a href="https://www.linkedin.com/in/joshua-aldrich-4924b323b/" target="blank">LinkedIn</a></p>
-        </div>
-        </div>
 
+        <div class="contactme">
+          <p><a href="tel:407.670.4797">407-670-4797</a></p>
+          <p>
+            <a href="mailto:joshuataldrich@gmail.com"
+              >joshuataldrich@gmail.com</a
+            >
+          </p>
+          <p>
+            <a href="https://github.com/JoshuaAldrich" target="blank">Github</a>
+          </p>
+          <p>
+            <a
+              href="https://www.linkedin.com/in/joshua-aldrich-4924b323b/"
+              target="blank"
+              >LinkedIn</a
+            >
+          </p>
+        </div>
+      </div>
     </article>
     <!--Contact end-->
 
     <!--Footer-->
 
     <footer>
-
-        <p>Website by Joshua Aldrich</p>
-
+      <p>Website by Joshua Aldrich</p>
     </footer>
-
-</body>
-
+  </body>
 </html>
