Forgot to add link to website running

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <!-- DDTEN project -->
           <div class="work img-2">
             <a
-              href="https://m.facebook.com/DD-10-LLC-101252281781627/"
+              href="https://joshuaaldrich.github.io/brainy-badgers-JA/"
               target="_blank"
             ></a>
             <div class="text">
