latest project added to portfolio

--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
           </div>
           <!--Javascript project-->
           <div class="work img-3">
-            <a href="https://github.com/JoshuaAldrich" target="_blank"></a>
+            <a
+              href="https://github.com/JoshuaAldrich/The-Game-Room"
+              target="_blank"
+            ></a>
             <div class="text">
-              <h3>In Progress</h3>
-              <p>Javascript</p>
+              <h3>The Game Room</h3>
+              <p>Express/Node.js Javascript</p>
             </div>
           </div>
           <!--Python project tbd-->
