--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             ></a>
             <div class="text">
               <h3>The Game Room</h3>
-              <p>Express/Node.js Javascript</p>
+              <p>Express/Node.js, Javascript</p>
             </div>
           </div>
           <!--Python project tbd-->
